# collagen_3D_multimetric-main

./: LICENSE  README.md  RF_regression.py  create_sprial_data.py  ctfire_statssummary.py  ctfireparser.py  final_dataframe.csv  final_dataframe_byslice.csv  final_dataframe_byslice_FLU.csv  final_dataframe_byslice_FLU_n2.csv  final_dataframe_byslice_SHG.csv  final_dataframe_byslice_SHG_n2.csv  finalcollapsed_dataframe_byslice.csv  finalcollapsed_dataframe_byslice_n2.csv  glcm3D_attempt.asv  glcm3D_attempt.m  parse_into_dataframe.py  parse_into_dataframe_YESslices.py  spiral_volume.tiff
collagen_3D_multimetric-main/: .gitignore  final_dataframe_byslice_FLU_temp.xlsx  final_dataframe_byslice_FLU_temp_stride5.xlsx  pyproject.toml  ~$final_dataframe_byslice_FLU_temp.xlsx
collagen_3D_multimetric-main/src/: glcm3D_attempt_gpu.m
collagen_3D_multimetric-main/src/calculate_glcm3D/: GLCM_TOP_attempt.m  glcm3D_attempt.m
collagen_3D_multimetric-main/src/collagen_dataframe/: RF_classifier.py  RF_regression.py  ctfire_statssummary.py  parse_into_dataframe_NOslices.py  parse_into_dataframe_YESslices.py
my-collagen_3D_multimetric-main/: main.py  pyproject.toml
