[project]
name = "collagen-3d-multimetric-main"
Repository = "https://github.com/hwilson23/collagen_3D_multimetric-main"
version = "0.1.0"
description = "analysis code for processing 3D collagen gel data, pipeline for collecting parameters from CurveAlign, TWOMBLI, and texture data"
authors = [ {name = "Helen Wilson", email = "hwilson23@wisc.edu"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tifffile>=2026.5.2",
]

license = "MIT"
license-files = ["LICENSE"]
